Project

General

Profile

Actions

Bug #16673

closed

rgw: setting rgw_swift_url_prefix = "/" doesn't work as expected

Added by Radoslaw Zarzynski almost 8 years ago. Updated about 7 years ago.

Status:
Resolved
Priority:
Normal
Target version:
-
% Done:

0%

Source:
Development
Tags:
Backport:
jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

According to the RadosGW's documentation in Jewel:

 ``rgw swift url prefix``

 :Description: The URL prefix for the Swift StorageURL that goes in front of
               the "/v1" part. This allows to run several Gateway instances
               on the same host. For compatibility, setting this configuration
               variable to empty causes the default "/swift" to be used.
               Use explicit prefix "/" to start StorageURL at the root.

Unfortunately, the special "/" case doesn't work. For details please take a look on the comment in PR #9582.


Related issues 1 (0 open1 closed)

Copied to rgw - Backport #17208: jewel: rgw: setting rgw_swift_url_prefix = "/" doesn't work as expectedResolvedRadoslaw ZarzynskiActions
Actions #1

Updated by Radoslaw Zarzynski almost 8 years ago

  • Status changed from In Progress to Fix Under Review
Actions #2

Updated by Radoslaw Zarzynski over 7 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Yehuda Sadeh over 7 years ago

  • Status changed from Pending Backport to Resolved

Since backport is non trivial, closing it. We can reopen again if needed.

Actions #4

Updated by Yehuda Sadeh over 7 years ago

  • Status changed from Resolved to Pending Backport

close wrong bug

Actions #5

Updated by Nathan Cutler over 7 years ago

  • Copied to Backport #17208: jewel: rgw: setting rgw_swift_url_prefix = "/" doesn't work as expected added
Actions #6

Updated by Nathan Cutler about 7 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF